# Projects

./: README.md
linuxconfig_rust/: Cargo.toml
linuxconfig_rust/src/: build.rs
myapp/: Cargo.toml  Readme.md  build.rs
sampleapp/: Cargo.toml  README.md  build.rs
testt/: Cargo.toml
testt/src/: main copy.rs  main(puffin).rs  main.rs
