[package]
name = "testt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.21.3",features = [
    "puffin",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
egui_extras = "0.21.0"
env_logger = "0.10"
puffin = "0.15.0"
puffin_http = "0.12.0"
